Layout update: - Avoid hardcoded panel background color in css. Use cycle instead - Add some space at the bottom of the panel. The bottom was previously   stuck to the last line - Complete single html tags

--- a/css/custom.css
+++ b/css/custom.css
@@ -629,14 +629,6 @@ footer a:hover{
   }
 }
 
-#panel-platform-0 {
-    background-color: #eeeeee;
-}
-
-#panel-platform-2 {
-    background-color: #eeeeee;
-}
-
 .post-date,
 .post-author,
 .post-project {
